# app/http/controllers/balances.go
@@ -1,30 +1,41 @@
 package controllers
 
 import (
+	"bank_file_analyser/config"
 	"bank_file_analyser/domain"
+	"bank_file_analyser/fileparser"
 	"mime/multipart"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-type HTTPHandler struct {
+// Http handler for balances API
+type BalancesHandler struct {
 	AccBalanceService domain.BalanceGeneratorService
+	Config            *config.AppConfig
 }
 
-func NewHTTPHandler(srvc domain.BalanceGeneratorService) *HTTPHandler {
-	return &HTTPHandler{AccBalanceService: srvc}
+// initializes new Http handler for balances API
+func NewBalancesHandler(srvc domain.BalanceGeneratorService) *BalancesHandler {
+	return &BalancesHandler{AccBalanceService: srvc}
 }
 
+// ProcessFile API request struct
 type ProcessFileRequest struct {
-	File *multipart.FileHeader `form:"file" binding:"required"`
+	File             *multipart.FileHeader `form:"file" binding:"required"`
+	Date             string                `form:"date"`
+	ColumnSeparator  string                `form:"column_separator"`
+	DecimalPrecision *int                  `form:"decimal_precision"`
 }
 
+// Error response struct
 type ErrorResponse struct {
 	Error string `json:"error"`
 }
 
-type SuccessResponse struct {
+// ProcessFile API success response struct
+type ProcessFileSuccessResponse struct {
 	Message string                           `json:"message"`
 	Result  *domain.FormattedBankAccBalances `json:"result"`
 }
@@ -35,34 +46,57 @@ type SuccessResponse struct {
 // @Tags Accounts
 // @Produce json
 // @Param file formData file true "file to process"
-// @Success 200 {object} SuccessResponse
+// @Param date formData string false "filter date format:DD/MM/YYYY"
+// @Param column_separator formData string false "column separator used in file"
+// @Param decimal_precision formData integer false "decimal precision for amounts"
+// @Success 200 {object} ProcessFileSuccessResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
 // @Router /process_statement [post]
-func (h *HTTPHandler) ProcessStatement(c *gin.Context) {
+func (h *BalancesHandler) ProcessStatement(c *gin.Context) {
 	req := ProcessFileRequest{}
+
+	//parse request
 	err := c.Bind(&req)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, ErrorResponse{Error: err.Error()})
 		return
 	}
 
+	//check if file is not empty
 	if req.File == nil {
 		c.JSON(http.StatusBadRequest, ErrorResponse{Error: "invalid file"})
 		return
 	}
 
+	//set default value for column separator
+	if req.ColumnSeparator == "" {
+		req.ColumnSeparator = h.Config.FileColumnSeparator
+	}
+
+	//set default value for decimal precision
+	if req.DecimalPrecision == nil {
+		req.DecimalPrecision = &h.Config.DecimalPrecision
+	}
+
+	//initialize file parser
+	parser := fileparser.NewCSVParser(rune(req.ColumnSeparator[0]), *req.DecimalPrecision)
+
+	//open uploaded file
 	file, err := req.File.Open()
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, ErrorResponse{Error: err.Error()})
 		return
 	}
+	defer file.Close()
 
-	accBalances, err := h.AccBalanceService.GenerateAccBalancesFromFile(file)
+	//process file data
+	accBalances, err := h.AccBalanceService.GenerateAccBalancesFromFile(parser, file, req.Date)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, ErrorResponse{Error: err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, SuccessResponse{Message: "success", Result: h.AccBalanceService.FormatAccountBalances(accBalances)})
+	//return processed result
+	c.JSON(http.StatusOK, ProcessFileSuccessResponse{Message: "success", Result: h.AccBalanceService.FormatAccountBalances(accBalances)})
 }
